--- a/dotNET 6 Blazor WASM/MudBlazorAndDefaultBlazorApp/MudBlazorAndDefaultBlazorApp/Client/_Imports.razor
+++ b/dotNET 6 Blazor WASM/MudBlazorAndDefaultBlazorApp/MudBlazorAndDefaultBlazorApp/Client/_Imports.razor
@@ -8,3 +8,4 @@
 @using Microsoft.JSInterop
 @using MudBlazorAndDefaultBlazorApp.Client
 @using MudBlazorAndDefaultBlazorApp.Client.Shared
+@using MudBlazor
