MudText and MudButton

--- a/dotNET 6 Blazor WASM/MudBlazorAndDefaultBlazorApp/MudBlazorAndDefaultBlazorApp/Client/Pages/FetchData.razor
+++ b/dotNET 6 Blazor WASM/MudBlazorAndDefaultBlazorApp/MudBlazorAndDefaultBlazorApp/Client/Pages/FetchData.razor
@@ -4,9 +4,9 @@
 
 <PageTitle>Weather forecast</PageTitle>
 
-<h1>Weather forecast</h1>
+<MudText Typo="Typo.h3">Weather forecast</MudText>
 
-<p>This component demonstrates fetching data from the server.</p>
+<MudText Typo="Typo.body1">This component demonstrates fetching data from the server.</MudText>
 
 @if (forecasts == null)
 {
