--- a/dotNET 6 Blazor WASM/MudBlazorAndDefaultBlazorApp/MudBlazorAndDefaultBlazorApp/Client/Shared/MainLayout.razor
+++ b/dotNET 6 Blazor WASM/MudBlazorAndDefaultBlazorApp/MudBlazorAndDefaultBlazorApp/Client/Shared/MainLayout.razor
@@ -1,16 +1,18 @@
 ﻿@inherits LayoutComponentBase
 
-<MudThemeProvider/>
-<MudDialogProvider/>
-<MudSnackbarProvider/>
+<MudThemeProvider Theme="currentTheme" />
+<MudDialogProvider />
+<MudSnackbarProvider />
 
 <MudLayout>
     <MudAppBar>
         <MudIconButton Icon="@Icons.Material.Filled.Menu" Color="Color.Inherit" Edge="Edge.Start" OnClick="@((e) => DrawerToggle())" />
         MudBlazorAndDefaultBlazorApp
+        <MudSpacer />
+        <MudIconButton Icon="@IconNextMode" OnClick="@((e) => UIModeToggle())" />
     </MudAppBar>
     <MudDrawer @bind-Open="@_drawerOpen">
-        <NavMenu/>
+        <NavMenu />
     </MudDrawer>
     <MudMainContent>
         @Body
@@ -18,6 +20,66 @@
 </MudLayout>
 
 @code {
+    public string IconDarkMode = MudBlazor.Icons.Material.Rounded.DarkMode;
+    public string IconLightMode = MudBlazor.Icons.Material.Rounded.LightMode;
+    public string? IconNextMode;
+
+    protected override void OnInitialized()
+    {
+        currentTheme = lightTheme;
+        IconNextMode = IconDarkMode;
+    }
+
+    void UIModeToggle()
+    {
+        if (currentTheme == lightTheme)
+        {
+            currentTheme = darkTheme;
+            IconNextMode = IconLightMode;
+        }
+        else
+        {
+            currentTheme = lightTheme;
+            IconNextMode = IconDarkMode;
+        }
+    }
+
+    MudTheme currentTheme = new MudTheme();
+    MudTheme lightTheme = new MudTheme()
+        {
+            Palette = new Palette()
+            {
+                Black = "#272c34"
+            }
+        };
+
+    MudTheme darkTheme = new MudTheme()
+        {
+            Palette = new Palette()
+            {
+                Black = "#27272f",
+                Background = "#32333d",
+                BackgroundGrey = "#27272f",
+                Surface = "#373740",
+                DrawerBackground = "#27272f",
+                DrawerText = "rgba(255,255,255, 0.50)",
+                DrawerIcon = "rgba(255,255,255, 0.50)",
+                AppbarBackground = "#27272f",
+                AppbarText = "rgba(255,255,255, 0.70)",
+                TextPrimary = "rgba(255,255,255, 0.70)",
+                TextSecondary = "rgba(255,255,255, 0.50)",
+                ActionDefault = "#adadb1",
+                ActionDisabled = "rgba(255,255,255, 0.26)",
+                ActionDisabledBackground = "rgba(255,255,255, 0.12)",
+                Divider = "rgba(255,255,255, 0.12)",
+                DividerLight = "rgba(255,255,255, 0.06)",
+                TableLines = "rgba(255,255,255, 0.12)",
+                LinesDefault = "rgba(255,255,255, 0.12)",
+                LinesInputs = "rgba(255,255,255, 0.3)",
+                TextDisabled = "rgba(255,255,255, 0.2)"
+            }
+        };
+
     bool _drawerOpen = true;
 
     void DrawerToggle()
