--- a/dotNET 6 Blazor WASM/MudBlazorAndDefaultBlazorApp/MudBlazorAndDefaultBlazorApp/Client/Pages/FetchData.razor
+++ b/dotNET 6 Blazor WASM/MudBlazorAndDefaultBlazorApp/MudBlazorAndDefaultBlazorApp/Client/Pages/FetchData.razor
@@ -14,29 +14,35 @@
 }
 else
 {
-    <MudGrid>
-        <MudItem xs="12" sm="4">
-            <MudTable Items="@forecasts" SortLabel="SortBy" Hover="true" Elevation="5">
-                <HeaderContent>
-                    <MudTh><MudTableSortLabel SortBy="new Func<WeatherForecast, object>(x => x.Date)">Date</MudTableSortLabel></MudTh>
-                    <MudTh><MudTableSortLabel SortBy="new Func<WeatherForecast, object>(x => x.TemperatureC)">Temp. (C)</MudTableSortLabel></MudTh>
-                    <MudTh><MudTableSortLabel SortBy="new Func<WeatherForecast, object>(x => x.TemperatureF)">Temp. (F)</MudTableSortLabel></MudTh>
-                    <MudTh><MudTableSortLabel SortBy="new Func<WeatherForecast, object>(x => x.Summary)">Summary</MudTableSortLabel></MudTh>
-                </HeaderContent>
-                <RowTemplate>
-                    <MudTd>@context.Date.ToShortDateString()</MudTd>
-                    <MudTd>@context.TemperatureC</MudTd>
-                    <MudTd>@context.TemperatureF</MudTd>
-                    <MudTd>@context.Summary</MudTd>
-                </RowTemplate>
-                <PagerContent>
-                    <MudTablePager />
-                </PagerContent>
-            </MudTable>
-        </MudItem>
-    </MudGrid>
+    <MudTabs @bind-ActivePanelIndex="@activeTabIndex" Outlined>
+        <MudTabPanel Text="Table" Icon="@Icons.Material.Filled.WbSunny" BadgeData='"New"' BadgeColor="Color.Info" ToolTip="Forecasts displayed in a table">
+            <MudGrid>
+                <MudItem xs="12" sm="4">
+                    <MudTable Items="@forecasts" SortLabel="SortBy" Hover="true" Elevation="5">
+                        <HeaderContent>
+                            <MudTh><MudTableSortLabel SortBy="new Func<WeatherForecast, object>(x => x.Date)">Date</MudTableSortLabel></MudTh>
+                            <MudTh><MudTableSortLabel SortBy="new Func<WeatherForecast, object>(x => x.TemperatureC)">Temp. (C)</MudTableSortLabel></MudTh>
+                            <MudTh><MudTableSortLabel SortBy="new Func<WeatherForecast, object>(x => x.TemperatureF)">Temp. (F)</MudTableSortLabel></MudTh>
+                            <MudTh><MudTableSortLabel SortBy="new Func<WeatherForecast, object>(x => x.Summary)">Summary</MudTableSortLabel></MudTh>
+                        </HeaderContent>
+                        <RowTemplate>
+                            <MudTd>@context.Date.ToShortDateString()</MudTd>
+                            <MudTd>@context.TemperatureC</MudTd>
+                            <MudTd>@context.TemperatureF</MudTd>
+                            <MudTd>@context.Summary</MudTd>
+                        </RowTemplate>
+                        <PagerContent>
+                            <MudTablePager />
+                        </PagerContent>
+                    </MudTable>
+                </MudItem>
+            </MudGrid>
+        </MudTabPanel>
 
-    <MudChart ChartType="ChartType.Line" ChartSeries="@Series" ChartOptions="@ChartOptions" LegendPosition="Position.Right" Width="570px" Height="570px" />
+        <MudTabPanel Text="Chart" Icon="@Icons.Material.Outlined.Cloud" BadgeData="@TabChartBadgeText" BadgeColor="Color.Error" ToolTip="Forecasts displayed in a chart">
+            <MudChart ChartType="ChartType.Line" ChartSeries="@Series" ChartOptions="@ChartOptions" LegendPosition="Position.Right" Width="570px" Height="570px" />
+        </MudTabPanel>    
+    </MudTabs>
 }
 
 @code {
@@ -44,6 +50,9 @@ else
 
     List<ChartSeries> Series = new();
     ChartOptions ChartOptions = new();
+
+    int activeTabIndex;
+    string TabChartBadgeText { get; set; }
 
     protected override async Task OnInitializedAsync()
     {
@@ -63,5 +72,7 @@ else
         ChartOptions.InterpolationOption = InterpolationOption.NaturalSpline;
         ChartOptions.DisableLegend = false;
         ChartOptions.ChartPalette = new string[] { MudBlazor.Colors.Green.Default, MudBlazor.Colors.Red.Default };
+
+        TabChartBadgeText = forecasts?.Length.ToString() ?? "0";
     }
 }
